[Changed] Gradle: update org.jetbrains.intellij to 1.8.0, that supports PS type (finally);